# EleSim

./: .gitignore  CMakeLists.txt  README.md  build.bat
installer/config/: config.xml
resources/: elesim.qrc  elesim.rc
src/: CMakeLists.txt  main.cpp
src/core/: Circuit.cpp  Circuit.h  Component.cpp  Component.h  Node.cpp  Node.h  UndoManager.cpp  UndoManager.h  Wire.cpp  Wire.h
src/core/components/: ACSource.cpp  ACSource.h  ANDGate.cpp  ANDGate.h  Capacitor.cpp  Capacitor.h  DCCurrentSource.cpp  DCCurrentSource.h  DCSource.cpp  DCSource.h  Diode.cpp  Diode.h  Ground.cpp  Ground.h  Inductor.cpp  Inductor.h  Junction.cpp  Junction.h  Lamp.cpp  Lamp.h  NMosfet.cpp  NMosfet.h  NOTGate.cpp  NOTGate.h  ORGate.cpp  ORGate.h  PMosfet.cpp  PMosfet.h  PulseSource.cpp  PulseSource.h  Resistor.cpp  Resistor.h  Source.h  Switch.cpp  Switch.h  Switch3Way.cpp  Switch3Way.h  Switch4Way.cpp  Switch4Way.h  XORGate.cpp  (+3 more)
src/simulation/: MNASolver.cpp  MNASolver.h  SharedFrameBuffer.h  SimulationConfig.h  SimulationResult.h  TransientState.h
src/ui/: ComponentToolbar.cpp  ComponentToolbar.h  MainWindow.cpp  MainWindow.h  OscilloscopeWidget.cpp  OscilloscopeWidget.h  PropertyPanel.cpp  PropertyPanel.h  SchematicScene.cpp  SchematicScene.h  SchematicView.cpp  SchematicView.h  SimulationDialog.cpp  SimulationDialog.h  SplashScreen.cpp  SplashScreen.h
src/ui/graphics/: GraphicComponent.cpp  GraphicComponent.h  GraphicPin.cpp  GraphicPin.h  GraphicWire.cpp  GraphicWire.h
src/ui/graphics/items/: GACSource.cpp  GACSource.h  GANDGate.cpp  GANDGate.h  GCapacitor.cpp  GCapacitor.h  GDCCurrentSource.cpp  GDCCurrentSource.h  GDCSource.cpp  GDCSource.h  GDiode.cpp  GDiode.h  GGround.cpp  GGround.h  GInductor.cpp  GInductor.h  GJunction.cpp  GJunction.h  GLamp.cpp  GLamp.h  GNMosfet.cpp  GNMosfet.h  GNOTGate.cpp  GNOTGate.h  GORGate.cpp  GORGate.h  GPMosfet.cpp  GPMosfet.h  GPulseSource.cpp  GPulseSource.h  GResistor.cpp  GResistor.h  GSwitch.cpp  GSwitch.h  GSwitch3Way.cpp  GSwitch3Way.h  GSwitch4Way.cpp  GSwitch4Way.h  GXORGate.cpp  GXORGate.h  (+2 more)
tests/: CMakeLists.txt  test_ac_analysis.cpp  test_ac_resistor_lamp.cpp  test_and_gate.cpp  test_bridge_rectifier.cpp  test_current_source.cpp  test_diode_clipper.cpp  test_halfwave_rectifier.cpp  test_nmosfet.cpp  test_not_gate.cpp  test_or_gate.cpp  test_parallel_lc_tank.cpp  test_pmosfet.cpp  test_pulse_source.cpp  test_rc_differentiator.cpp  test_rl_highpass.cpp  test_rlc_series.cpp  test_voltage_divider_mixed.cpp  test_xor_gate.cpp  test_zener_diode.cpp
tests/circuits/: ac_resistor_lamp_loop.esim  and_gate_output_high.esim  and_gate_output_low.esim  and_gate_pulse.esim  and_gate_roundtrip.esim  bridge_filtered.esim  bridge_rectifier.esim  current_source_basic.esim  current_source_divider.esim  current_source_ladder.esim  current_source_single_r.esim  current_source_superposition.esim  diode_clipper.esim  halfwave_filtered.esim  halfwave_rectifier.esim  nmosfet_cutoff_dc.esim  nmosfet_gate_pulse.esim  nmosfet_roundtrip.esim  nmosfet_switch_dc.esim  not_gate_output_high.esim  not_gate_output_low.esim  not_gate_pulse.esim  not_gate_roundtrip.esim  or_gate_output_high.esim  or_gate_output_low.esim  or_gate_pulse.esim  or_gate_roundtrip.esim  parallel_lc_tank.esim  pmosfet_cutoff_dc.esim  pmosfet_gate_pulse.esim  pmosfet_roundtrip.esim  pmosfet_switch_dc.esim  pulse_25duty_divider.esim  pulse_75duty_rc.esim  pulse_rl_transient.esim  pulse_square_r.esim  rc_differentiator.esim  rc_lowpass.esim  rl_highpass.esim  rlc_series.esim  (+9 more)
